fix: synchronize commands even if were registered after startup with debouncing